1.删除过期代码，2.修复测试用例